WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218358
[GLIB] REGRESSION(
r269144
) imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-scrollMargin.html is failing
https://bugs.webkit.org/show_bug.cgi?id=218358
Summary
[GLIB] REGRESSION(r269144) imported/w3c/web-platform-tests/css/cssom-view/scr...
Lauro Moura
Reported
2020-10-29 14:58:24 PDT
imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-scrollMargin.html
r269144
updated the expectations but the test is still giving the old results, both in the bots and locally. Diff: --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-scrollMargin-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-scrollMargin-actual.txt @@ -1,5 +1,5 @@ -PASS scrollIntoView({block: "center", inline: "center"}) -PASS scrollIntoView({block: "start", inline: "start"}) -PASS scrollIntoView({block: "end", inline: "end"}) +FAIL scrollIntoView({block: "center", inline: "center"}) assert_approx_equals: scrollX expected 153.5 +/- 0.5 but got 158 +FAIL scrollIntoView({block: "start", inline: "start"}) assert_approx_equals: scrollX expected 184 +/- 0.5 but got 200 +FAIL scrollIntoView({block: "end", inline: "end"}) assert_approx_equals: scrollX expected 123 +/- 0.5 but got 115
Attachments
Patch
(47.58 KB, patch)
2020-10-30 02:52 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-10-29 15:04:52 PDT
Gardened in
r269172
Martin Robinson
Comment 2
2020-10-30 02:52:34 PDT
Created
attachment 412727
[details]
Patch
Martin Robinson
Comment 3
2020-10-30 02:53:08 PDT
It seems that I did not fully expose scroll-margin when ENABLE_SCROLL_SNAP was disabled. I believe that this patch fixes the issue.
Lauro Moura
Comment 4
2020-10-30 06:10:55 PDT
(In reply to Martin Robinson from
comment #3
)
> It seems that I did not fully expose scroll-margin when ENABLE_SCROLL_SNAP > was disabled. I believe that this patch fixes the issue.
Tested the patch with the css-om suite and indeed it fixes the issue with no regressions. Thanks!
EWS
Comment 5
2020-11-02 06:59:27 PST
Committed
r269246
: <
https://trac.webkit.org/changeset/269246
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412727
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-11-02 07:00:22 PST
<
rdar://problem/70948378
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug