[GLIB] REGRESSION(r269144) imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-scrollMargin.html is failing https://bugs.webkit.org/show_bug.cgi?id=218358

Patch by Martin Robinson <mrobinson@igalia.com> on 2020-11-02
Reviewed by Simon Fraser.

Source/WebCore:

Finish some missing pieces of exposing scroll-margin when ENABLE_SCROLL_SNAP is off.
This allows non-scroll-snap ports to use scroll-margin.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle): Move scroll margin code
out of the ENABLE_SCROLL_SNAP block.
* css/CSSProperties.json: Remove ENABLE_SCROLL_SNAP requirement for scroll-margin properties.
* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const): Move scroll-margin code out of ENABLE_SCROLL_MARGIN block.
(WebCore::StyleProperties::asText const):  Ditto.
* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseSingleValue): Ditto.
(WebCore::CSSPropertyParser::parseShorthand): Ditto.

LayoutTests:

* platform/glib/TestExpectations: Mark test as passing.
* platform/gtk/imported/w3c/web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt: Update expectations.
* platform/wpe/imported/w3c/web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt: Ditto.

Canonical link: https://commits.webkit.org/231105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269246 268f45cc-cd09-0410-ab3c-d52691b4dbfc