Source/WebCore/css/parser/CSSPropertyParser.cpp
@@ -4141,12 +4141,12 @@ RefPtr<CSSValue> CSSPropertyParser::parseSingleValue(CSSPropertyID property, CSS
     case CSSPropertyPaddingBlockStart:
     case CSSPropertyPaddingBlockEnd:
         return consumeLengthOrPercent(m_range, m_context.mode, ValueRangeNonNegative, UnitlessQuirk::Forbid);
-#if ENABLE(CSS_SCROLL_SNAP)
     case CSSPropertyScrollMarginBottom:
     case CSSPropertyScrollMarginLeft:
     case CSSPropertyScrollMarginRight:
     case CSSPropertyScrollMarginTop:
         return consumeLength(m_range, m_context.mode, ValueRangeAll);
+#if ENABLE(CSS_SCROLL_SNAP)
     case CSSPropertyScrollPaddingBottom:
     case CSSPropertyScrollPaddingLeft:
     case CSSPropertyScrollPaddingRight:
@@ -5824,9 +5824,9 @@ bool CSSPropertyParser::parseShorthand(CSSPropertyID property, bool important)
         return consume2ValueShorthand(paddingBlockShorthand(), important);
     case CSSPropertyPaddingInline:
         return consume2ValueShorthand(paddingInlineShorthand(), important);
-#if ENABLE(CSS_SCROLL_SNAP)
     case CSSPropertyScrollMargin:
         return consume4ValueShorthand(scrollMarginShorthand(), important);
+#if ENABLE(CSS_SCROLL_SNAP)
     case CSSPropertyScrollPadding:
         return consume4ValueShorthand(scrollPaddingShorthand(), important);
 #endif
